[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/toolbox_project/assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/toolbox_project/scenes/ui/menu/controls/ControlMenuAction.gd" type="Script" id=2]

[node name="ControlMenuAction" type="PanelContainer"]
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 976.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 913.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Uninit ControlMenuAction"
align = 1
valign = 1

[node name="ButtonAdd" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 929.0
margin_right = 976.0
margin_bottom = 49.0
rect_min_size = Vector2( 47, 0 )
text = "+"

[node name="ControlMenuButtons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 976.0
margin_bottom = 65.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonAdd" to="." method="_on_ButtonAdd_pressed"]
